--- a/gui.ipynb
+++ b/gui.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "c000175c",
    "metadata": {},
    "outputs": [],
@@ -19,12 +19,13 @@
     "from keras.layers import Conv2D\n",
     "from keras.optimizers import Adam\n",
     "from keras.layers import MaxPooling2D\n",
-    "from keras.preprocessing.image import ImageDataGenerator"
+    "from keras.preprocessing.image import ImageDataGenerator\n",
+    "import threading"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "7d6a5478",
    "metadata": {},
    "outputs": [],
@@ -51,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "19d44c22",
    "metadata": {},
    "outputs": [],
@@ -71,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "8650157f",
    "metadata": {},
    "outputs": [],
@@ -118,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "117cb65e",
    "metadata": {},
    "outputs": [],
@@ -138,29 +139,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "1de12f6a",
+   "execution_count": null,
+   "id": "0283adf0",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'threading' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [6]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     16\u001b[0m root[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbg\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mblack\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m     17\u001b[0m exitButton \u001b[38;5;241m=\u001b[39m Button(root, text\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mQuit\u001b[39m\u001b[38;5;124m'\u001b[39m,fg\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mred\u001b[39m\u001b[38;5;124m\"\u001b[39m,command\u001b[38;5;241m=\u001b[39mroot\u001b[38;5;241m.\u001b[39mdestroy,font\u001b[38;5;241m=\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124marial\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;241m25\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbold\u001b[39m\u001b[38;5;124m'\u001b[39m))\u001b[38;5;241m.\u001b[39mpack(side \u001b[38;5;241m=\u001b[39m BOTTOM)\n\u001b[1;32m---> 18\u001b[0m \u001b[43mthreading\u001b[49m\u001b[38;5;241m.\u001b[39mThread(target \u001b[38;5;241m=\u001b[39m show_subject())\u001b[38;5;241m.\u001b[39mstart()\n\u001b[0;32m     19\u001b[0m threading\u001b[38;5;241m.\u001b[39mThread(target \u001b[38;5;241m=\u001b[39m show_avatar())\u001b[38;5;241m.\u001b[39mstart()\n\u001b[0;32m     20\u001b[0m root\u001b[38;5;241m.\u001b[39mmainloop()\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'threading' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "\n",
     "\n",
     "if __name__ == '__main__':\n",
     "    frame_number = 0\n",
-    "    root=tk.Tk()   \n",
+    "    root=Tk()\n",
     "    lmain = tk.Label(master=root,padx=50,bd=10)\n",
     "    lmain2 = tk.Label(master=root,bd=10)\n",
     "    lmain3=tk.Label(master=root,bd=10,fg=\"#CDCDCD\",bg='black')\n",
@@ -179,14 +168,6 @@
     "    threading.Thread(target = show_avatar()).start()\n",
     "    root.mainloop()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0283adf0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
